# base_project

./: .gitignore  .pre-commit-config.yaml  README.md  gitignore.txt  infer.py  pyproject.toml  setup.cfg  train.py
.ipynb_checkpoints/: infer-checkpoint.py  pyproject-checkpoint.toml  train-checkpoint.py
ds_project/: data_utils.py  model_utils.py  optim_utils.py  train_val_utils.py
ds_project/.ipynb_checkpoints/: data_utils-checkpoint.py  model_utils-checkpoint.py  optim_utils-checkpoint.py  train_val_utils-checkpoint.py
