[tool.poetry]
name = "basic-project"
version = "0.1.0"
description = "basic project to explore GAN"
authors = ["YuliaIvanova <ivanova3581321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
torchvision = "^0.15.2"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
